--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "gsap": "^3.12.5"
+  },
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "svelte": "^4.2.7",
+    "vite": "^5.0.0"
   }
 }
